# ordained

./: .editorconfig  LICENSE.txt  README.rst  cookiecutter.json  pyproject.toml  setup.cfg
docs/: conf.py  index.rst
hooks/: post_gen_project.py
src/ordained/: __init__.py  cli.py
{{cookiecutter.project_slug}}/: .gitignore  Dockerfile  MANIFEST.in  Makefile  README.rst  pyproject.toml  pytest.ini  setup.cfg  setup.py  towncrier.toml  tox.ini
{{cookiecutter.project_slug}}/docs/: conf.py  index.rst
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_slug}}/: __init__.py  __main__.py  {{cookiecutter.package_slug}}.py
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.package_slug}}.py
