[metadata]
name = ordained
version = 0.0a0
description = dOctoR wooD's opinionAted cookIecutter pythoN packagE scaffolDing (ORDAINED): an opinionated cookiecutter project template for Python packages.
description_file = README.rst
long_description = file:README.rst
long_description_content_type = text/x-rst
author = Bryan Patrick Wood
author_email = bpw1621@gmail.com
url = https://github.com/bpw1621/ordained
download_url = https://github.com/bpw1621/ordained/archive/master.zip
project_urls =
    Documentation = https://ordained.readthedocs.io/en/latest/
    Source = https://github.com/bpw1621/ordained
    Bug Tracker = https://github.com/bpw1621/ordained/issues
license = 'MIT'
keywords =
    cookiecutter
    template
    package
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Code Generators
    License :: OSI Approved :: MIT License

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.6
packages = find:
install_requires =
    cookiecutter
setup_requires =
    setuptools
    wheel

[bdist_wheel]
universal = true

[options.extras_require]
doc =
    sphinx
    sphinx_rtd_theme
    towncrier
cli =
    typer[all] < 0.4
all =
    sphinx
    sphinx_rtd_theme
    towncrier
    typer[all]

[options.entry_points]
console_scripts = ordained = :main
