[metadata]
name = {{cookiecutter.package_slug}}
version = attr:{{cookiecutter.package_slug}}.__version__
description = {{cookiecutter.project_description}}
description-file = README.md
long_description = file:README.md
long_description_content_type = text/markdown
author = {{cookiecutter.full_name}}
author_email = {{cookiecutter.email}}
url = 'https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.project_slug}}'
download_url = https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.project_slug}}/archive/master.zip
project_urls =
    Homepage = https://{{cookiecutter.github_username}}.github.io/{{cookiecutter.project_slug}}
    Source Code = https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.project_slug}}
    Documentation = https://{{cookiecutter.project_slug}}.readthedocs.io/en/latest/
    Bug Tracker = https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.project_slug}}/issues
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only

;keywords = ... TODO
;license = ... TODO

[options]
zip_safe = False
include_package_data = True
package_dir = =src
packages = find:
install_requires =
    wheel
setup_requires =
    setuptools

[options.packages.find]
where = src

[bdist_wheel]
universal = true

[options.extras_require]
{% for category, requirements in cookiecutter.requires | dictsort -%}
{{category}} =
{%- filter indent(width=4) %}
{% for requirement in requirements | sort -%}
    {{ requirement }}
{% endfor -%}
{% endfilter -%}
{% endfor -%}
all =
{%- filter indent(width=4) %}
{% for requirements in cookiecutter.requires.values() -%}
{% for requirement in requirements | sort -%}
    {{ requirement }}
{% endfor -%}
{% endfor %}
{% endfilter -%}
[options.entry_points]
console_scripts =
    {{cookiecutter.project_slug}} = {{cookiecutter.package_slug}}.{{cookiecutter.package_slug}}:main

[aliases]
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']